# regulated-rag

./: .env.example  .gitignore  BUILD-DECISIONS.md  CORPUS-NOTES.md  LICENSE  PRIOR-ART.md  README.md  pyproject.toml  requirements.txt
config/: corpus.yml  models.yml  retrieval.yml
db/: schema.sql
eval/: v0_1.yml
runs/: baseline-v0.1-handgrading.json  baseline-v0.1-handgrading.md  baseline-v0.1.json  baseline-v0.1.jsonl  edges-h6.jsonl  smoke-h7.jsonl
scripts/: eval_retrieval_edges.py  eval_v0_1.py  handgrade_scaffold.py  smoke_generation.py  smoke_retrieval.py  smoke_test.py  smoke_vector.py
src/regulated_rag/: __init__.py  chunker.py  db.py  embedder.py  generation.py  ingest_fdcpa.py  retrieval.py
