[project]
name = "regulated-rag"
version = "0.1.0-dev"
description = "Citation-grounded, refusal-bounded retrieval for regulated-domain corpora"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Rizwan Ahmed", email = "rizwan.ahmed109@gmail.com" }
]
requires-python = ">=3.12"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"