[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
 
[project]
name = "regulated-rag"
version = "0.1.0"
description = "Citation-grounded, refusal-bounded retrieval for regulated-domain corpora"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
  "anthropic",
  "beautifulsoup4",
  "cohere",
  "pgvector",
  "psycopg[binary]",
  "python-dotenv",
  "pyyaml",
  "rank-bm25",
  "requests",
  "voyageai",
]
 
[tool.setuptools.packages.find]
where = ["src"]